# cave_simulator

./: Pipfile  README.md  pyproject.toml
artifacts/inputs/: minimal_experience.json
artifacts/inputs/cave/: reference.json
artifacts/manifests/report_suites/: result_ladder.json
artifacts/results/: README.md
artifacts/results/readme/: 26_compression_clamp_metrics.json
cave/: __init__.py
cave/commitments/: __init__.py
cave/commitments/affect/: __init__.py  evaluator.py  state.py
cave/commitments/agency/: __init__.py  policy.py  state.py
cave/commitments/attention/: __init__.py  policy.py  state.py
cave/commitments/learning/: __init__.py  rules.py
cave/commitments/memory/: __init__.py  trace.py
cave/commitments/objective/: __init__.py  evaluator.py  state.py
cave/commitments/prediction/: __init__.py  predictor.py  state.py
cave/commitments/topology/: __init__.py  state.py
cave/demonstrations/: __init__.py  demo.py  examples.py  state.py
cave/observation/: __init__.py  compression.py  energy.py  episode_runs.py  episodes.py  pipeline.py  population.py  population_metrics.py  projections.py  run.py  structural.py  views.py
cave/observation/experience/: io.py  (+6 more)
cave/presentation/: __init__.py  filmstrip.py  render.py  runs.py  sprite_animation.py
cave/pressure/: __init__.py
cave/substrates/: __init__.py  evolved_subject.py  minimal_subject.py
fixtures/report_suites/: result_ladder.json
lib/: README.md
notebooks/.ipynb_checkpoints/: paper1_subjective_trajectories-checkpoint.ipynb  paper2_functional_role_emergence-checkpoint.ipynb
notebooks/primitive_demo/: README.md  primitive_engine.py  walkthrough.md
notebooks/tutorials/: 03_pressures_cavenet_evolved_subjects.ipynb  README.md
results/: README.md
results/result_ladder/: index.json  metrics.md
scripts/: README.md  build_results_index.py  generate_readme_assets.py
scripts/gpt2/: check_gpt2.py  download_gpt2.py  episode_demo.py
tests/: conftest.py  test_conversation_source.py  test_evolved_dissociation.py  test_gpt2_source.py  test_iris_expression.py  test_model.py  test_reports.py  test_role_evidence.py  test_subjects.py
tests/core/: test_model.py  test_runs.py
tests/presentation/: test_filmstrip.py  test_role_evidence.py  test_sprite_animation.py
tests/pressure/: test_compression.py  test_evolved_dissociation.py
tests/reports/: test_reports.py
tests/sources/: test_gpt2_source.py  test_primitive_source.py
(+219 files in other folders)
