[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cave"
version = "0.1.0"
description = "Experience object, attention, memory, and projection model."
requires-python = ">=3.12"
dependencies = ["numpy>=1.26", "matplotlib>=3.10"]

[project.scripts]
cave-run = "cave.observation.run:main"
cave-render = "cave.presentation.render:main"
cave-report-suite = "cave.presentation.reports.suites:main"

[project.optional-dependencies]
dev = ["pytest>=9"]
gpt2 = [
    "huggingface-hub>=0.23",
    "safetensors>=0.4",
    "torch>=2.3",
    "transformers>=4.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cave*"]
exclude = ["docs*", "fixtures*", "results*", "lib*", "out*", "scripts*", "tests*"]
