[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cave"
version = "0.1.0"
description = "Experience object, attention, memory, and projection model."
requires-python = ">=3.12"
dependencies = ["numpy>=1.26", "matplotlib>=3.10"]

[project.scripts]
cave-run = "cave.observation.run:main"
cave-render = "cave.presentation.render:main"
cave-report-suite = "cave.presentation.reports.suites:main"

[project.optional-dependencies]
dev = ["pytest>=9"]
gpt2 = [
    "huggingface-hub>=0.23",
    "safetensors>=0.4",
    "torch>=2.3",
    "transformers>=4.40",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cave*"]
exclude = ["artifacts*", "docs*", "lib*", "out*", "scripts*", "tests*"]

[tool.setuptools.package-data]
cave = [
    "presentation/sprites/assets/gba/*.json",
    "presentation/sprites/assets/gba/*.png",
    "presentation/sprites/assets/gba/background/*.png",
    "presentation/sprites/assets/gba/generated/*.png",
    "presentation/sprites/assets/gba/sprites/*.png",
    "presentation/sprites/assets/gba/sprites/objects/*.png",
    "presentation/sprites/assets/gba/sprites/subjects/*/*.png",
    "presentation/sprites/assets/gba/tiles/*.png",
    "presentation/sprites/assets/gba/ui/*.png",
    "interactive/game/shared/assets/attract/*.png",
    "interactive/game/tutorials/build_cave/assets/*.json",
    "interactive/game/tutorials/build_cave/assets/apparatus/*.png",
]
